refactor setThreshold and setName methods